Fix an add address block apperance on small screens

--- a/__dev/views/modules/address/address.styl
+++ b/__dev/views/modules/address/address.styl
@@ -108,6 +108,7 @@
 		+below(674px) 
 			display flex
 			flex-direction column
+			display none
 
 	&__title-add 
 		text-transform uppercase
